syntax = "proto3";

package livekit;
option go_package = "github.com/livekit/protocol/proto";

import "proto/livekit_models.proto";
import "proto/livekit_recording.proto";

message WebhookEvent {
  // one of room_started, room_finished, participant_joined, participant_left, recording_started, recording_finished
  string event = 1;

  Room room = 2;

  // set when event is participant_*
  ParticipantInfo participant = 3;

  // set when event is recording_*
  RecordingInfo recording_info = 5;
}
